update commands